# cam_rs

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  go2rtc.sh  go2rtc.yaml
.github/workflows/: ghcr.yml
src/: index.html  main.rs
src/onvif/: models.rs  service.rs
