[package]
name = "cam_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
base64 = "0.22"
dotenvy = "0.15"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
roxmltree = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["fs"] }
