[package]
name = "cam_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
base64 = "0.22"
dotenvy = "0.15"
rand = "0.10"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
roxmltree = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1.49", features = ["macros", "process", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["fs"] }
